WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132988
Link search area for touch events is too large in some cases
https://bugs.webkit.org/show_bug.cgi?id=132988
Summary
Link search area for touch events is too large in some cases
Antti Koivisto
Reported
2014-05-16 04:56:32 PDT
We select nearby links too eagerly with some devices and zoom levels.
Attachments
patch
(3.75 KB, patch)
2014-05-16 05:06 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch2
(4.78 KB, patch)
2014-05-16 06:45 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch3
(5.94 KB, patch)
2014-05-16 12:41 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-05-16 04:56:59 PDT
<
rdar://problem/16917843
>
Antti Koivisto
Comment 2
2014-05-16 05:06:20 PDT
Created
attachment 231568
[details]
patch
Antti Koivisto
Comment 3
2014-05-16 06:45:44 PDT
Created
attachment 231570
[details]
patch2
Simon Fraser (smfr)
Comment 4
2014-05-16 09:13:13 PDT
Comment on
attachment 231570
[details]
patch2 View in context:
https://bugs.webkit.org/attachment.cgi?id=231570&action=review
> Source/WebCore/platform/PlatformScreen.h:69 > + float mainScreenRelativePPI();
Relative to what?
Antti Koivisto
Comment 5
2014-05-16 12:41:06 PDT
Created
attachment 231585
[details]
patch3 now with missing PlatformScreen implementation
Antti Koivisto
Comment 6
2014-05-16 12:42:50 PDT
(In reply to
comment #4
)
> Relative to what?
Relative to the regular iPhone PPI 163.
Simon Fraser (smfr)
Comment 7
2014-05-16 13:14:01 PDT
Comment on
attachment 231585
[details]
patch3 View in context:
https://bugs.webkit.org/attachment.cgi?id=231585&action=review
> Source/WebCore/page/ios/FrameIOS.mm:435 > + float scale = page() ? page()->pageScaleFactor() : 1;
I don't know how we'd ever get here with a null page.
> Source/WebCore/page/ios/FrameIOS.mm:-469 > - // We don't approximate the node if we are dragging, we instead force the user to be precise.
Did the code related to this comment disappear some time in the past?
> Source/WebCore/platform/ios/PlatformScreenIOS.mm:102 > +float mainScreenRelativePPI()
This name still confuses me. It sounds more like a screenPPIFactor(), and a comment in the header should say what it's relative to.
Antti Koivisto
Comment 8
2014-05-16 13:22:57 PDT
(In reply to
comment #7
)
> I don't know how we'd ever get here with a null page.
Probably can't.
> Did the code related to this comment disappear some time in the past?
I think so. It didn't make sense where it was.
> > Source/WebCore/platform/ios/PlatformScreenIOS.mm:102 > > +float mainScreenRelativePPI() > > This name still confuses me. It sounds more like a screenPPIFactor(), and a comment in the header should say what it's relative to.
Will rename, thanks.
Antti Koivisto
Comment 9
2014-05-16 13:54:53 PDT
http://trac.webkit.org/changeset/168977
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug