Link search area for touch events is too large in some cases https://bugs.webkit.org/show_bug.cgi?id=132988 <rdar://problem/16917843>

Reviewed by Simon Fraser.

* page/ios/FrameIOS.mm:
(WebCore::Frame::qualifyingNodeAtViewportLocation):

    - Adjust the search area to screen ppi.
    - Remove cut-off at scale 1. This made us pick physically far-away elements when zoomed in.

* platform/PlatformScreen.h:
* platform/ios/PlatformScreenIOS.mm:
(WebCore::mobileGestaltFloatValue):
(WebCore::screenPPIFactor):

    Figure out screens physical PPI relative to a base.



Canonical link: https://commits.webkit.org/151043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168977 268f45cc-cd09-0410-ab3c-d52691b4dbfc